--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,11 @@
   <body>
     <div class="input-group mb-3">
       <input
+        id="textInput"
         type="text"
         class="form-control"
-        placeholder="Country name"
-        aria-label="Country name"
+        placeholder="Find some country"
+        aria-label="Find some country"
         aria-describedby="button-addon2"
       />
     </div>
